tests/negative/neg_result_unguarded.safe
-- Test: neg_result_unguarded
-- Description: Unguarded access to variant field of discriminated result.
--   Accessing R.Value without establishing R.OK = True violates the
--   discriminant-check safety rule. The compiler must reject this.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Expected: REJECT discriminant_check_not_established

package neg_result_unguarded

   type error_code is range 0 to 255;

   type parse_result (ok : boolean = false) is record
      case ok
         when true
            value : integer;
         when false
            error : error_code;



   function try_parse (input : integer) returns parse_result

      if input >= 0
         return (ok = true, value = input);
      else
         return (ok = false, error = 1);



   --  NONCONFORMING: accesses R.Value without establishing R.OK = True.
   --  The discriminant check cannot be discharged statically.
   function unsafe_access (input : integer) returns integer
      r : parse_result = try_parse (input);

      return r.value;  -- REJECTED: R.OK not established



